k8s/base/external-mssql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mssql-hospital
spec:
  type: ExternalName
  externalName: 10.100.6.37 # Reemplaza por la IP real del MSSQL 2012
