k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: importa-sis-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: importa-sis.hospital.gob.pe
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: importa-acreditados-sis-service
            port:
              number: 80
